longhorn/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: issuer-infisical
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.moody
      secretName: longhorn-tls

  rules:
    - host: longhorn.moody
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
